# GameListCreator_ETL

./: .gitignore  Dockerfile  README.md  SQL_Create_Connection_String.py  Test.py  docker-compose.yaml  pyproject.toml  requirements.txt
dags/: youtube-dag.py
docker-scripts/: ETL.py
