[project]
name = "gamelistcreator-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "apache-airflow==2.9",
    "howlongtobeatpy>=1.0.18",
    "polars>=1.27.1",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "steamspypi>=1.1.1",
]
